Fixed rendering comic covers [#935]
 * Changed the layout to adjust to the screen width.
 * Added a single css style to avoid overlapping the footer.

--- a/comixed-webui/src/app/app.component.scss
+++ b/comixed-webui/src/app/app.component.scss
@@ -16,6 +16,7 @@
   left: 0;
   bottom: 0;
   position: fixed;
+  width: 100%;
   z-index: 100;
   background-color: var(--primary-color);
   color: var(--text-primary-color);
