--- a/comixed-webui/src/app/comic-book/components/comic-detail-card/comic-detail-card.component.scss
+++ b/comixed-webui/src/app/comic-book/components/comic-detail-card/comic-detail-card.component.scss
@@ -1,8 +1,5 @@
 @import 'src/styles';
 
-.cx-detail-card-content {
-}
-
 .comic-detail-card {
   position: relative;
   display: inline-block;
